src/components/Option/Option.module.css
@import url(../../styles/variables.module.css);

.label {
  border-radius: 7.942px;
  border: 0.794px solid var(--label-color);
  padding: 0.25rem 0.5rem;
  font-size: 0.64rem;
}

@media (hover: hover) {
  .label:has(.input:enabled):not(
      .active
    ):hover {
    background-color: var(--background-color);
    border-color: var(--background-color);
  }
}

.label:has(.input:enabled):active,
.label:has(.input:enabled):focus {
  background-color: var(--label-color);
  border-color: var(--label-color);
  color: var(--white-color);
}

.input {
  width: 0;
  height: 0;
  padding: 0;
  margin: 0;
  border: 0;
}

.label.active {
  background-color: var(--label-color);
  color: var(--white-color);
}

.label.correct {
  background-color: var(--correct-color);
  border-color: var(--correct-color);
  color: var(--text-color);
}

.label.incorrect {
  background-color: var(--incorrect-color);
  border-color: var(--incorrect-color);
  opacity: 0.5;
  color: var(--text-color);
}

.label:not(.correct):has(.input:disabled) {
  opacity: 0.5;
}

.label:has(.input:disabled) {
  cursor: not-allowed;
}

